--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
+/*===== GOOGLE FONTS =====*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 * , *::after, *::before{
     margin: 0;
     padding: 0;
@@ -8,6 +10,25 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 /* ---------------universal design-------------- */
+
+/*===== VARIABLES CSS =====*/
+:root{
+  --nav-width: 92px;
+
+  /*===== Colores =====*/
+  --first-color: #0C5DF4;
+  --bg-color: #12192C;
+  --sub-color: #B6CEFC;
+  --white-color: #FFF;
+  
+  /*===== Fuente y tipografia =====*/
+  --body-font: 'Poppins', sans-serif;
+  --normal-font-size: 1rem;
+  --small-font-size: .875rem;
+  
+  /*===== z index =====*/
+  --z-fixed: 100;
+}
 .btn {
     -webkit-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
@@ -144,6 +165,113 @@ main svg{
     color: #000 !important;
 }
 /* ---------------index--colleges ends-------------- */
+/* ---------------results - sidenav-------------- */
+/*===== l NAV =====*/
+.l-navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: var(--nav-width);
+    height: 100vh;
+    background-color: var(--bg-color);
+    color: var(--white-color);
+    padding: 1.5rem 1.5rem 2rem;
+    transition: .5s;
+    z-index: var(--z-fixed);
+  }
+  
+  /*===== NAV =====*/
+  .nav{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+  }
+  .nav__brand{
+    display: grid;
+    grid-template-columns: max-content max-content;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+  .nav__toggle{
+    font-size: 1.25rem;
+    padding: .75rem;
+    cursor: pointer;
+  }
+  .nav__logo{
+    color: var(--white-color);
+    font-weight: 600;
+  }
+  
+  .nav__link{
+    display: grid;
+    grid-template-columns: max-content max-content;
+    align-items: center;
+    column-gap: .75rem;
+    padding: .75rem;
+    color: var(--white-color);
+    border-radius: .5rem;
+    margin-bottom: 1rem;
+    transition: .3s;
+    cursor: pointer;
+  }
+  .nav__link:hover{
+    background-color: var(--first-color);
+  }
+  .nav__icon{
+    font-size: 1.25rem;
+  }
+  .nav__name{
+    font-size: var(--small-font-size);
+  }
+  
+  /*Expander menu*/
+  .expander{
+    width: calc(var(--nav-width) + 9.25rem);
+  }
+  
+  /*Add padding body*/
+  .body-pd{
+    padding: 2rem 0 0 16rem;
+  }
+  
+  /*Active links menu*/
+  .active{
+    background-color: var(--first-color);
+  }
+  
+  /*===== COLLAPSE =====*/
+  .collapse{
+    grid-template-columns: 20px max-content 1fr;
+  }
+  .collapse__link{
+    justify-self: flex-end;
+    transition: .5s;
+  }
+  .collapse__menu{
+    display: none;
+    padding: .75rem 2.25rem;
+  }
+  .collapse__sublink{
+    color: var(--sub-color);
+    font-size: var(--small-font-size);
+  }
+  .collapse__sublink:hover{
+    color: var(--white-color);
+  }
+  
+  /*Show collapse*/
+  .showCollapse{
+    display: block;
+  }
+  
+  /*Rotate icon*/
+  .rotate{
+    transform: rotate(180deg);
+  }
+/* ---------------results - sidenav ends-------------- */
 /* ---------------media query start-------------- */
 @media (max-width:768px){
     header{
