--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,98 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap");
 /*===== GLOBAL VARS =====*/
+/*===== GLOBAL NAIMATIONS =====*/
+@-webkit-keyframes red {
+  0% {
+    height: 30px;
+    width: 0;
+    border-width: 5px;
+  }
+  55% {
+    height: 13px;
+    width: 27px;
+    border-width: 10px;
+  }
+  70% {
+    height: 20px;
+    width: 20px;
+    border-width: 10px;
+  }
+  85% {
+    height: 15px;
+    width: 25px;
+    border-width: 10px;
+  }
+  100% {
+    height: 20px;
+    width: 20px;
+    border-width: 10px;
+  }
+}
+@keyframes red {
+  0% {
+    height: 30px;
+    width: 0;
+    border-width: 5px;
+  }
+  55% {
+    height: 13px;
+    width: 27px;
+    border-width: 10px;
+  }
+  70% {
+    height: 20px;
+    width: 20px;
+    border-width: 10px;
+  }
+  85% {
+    height: 15px;
+    width: 25px;
+    border-width: 10px;
+  }
+  100% {
+    height: 20px;
+    width: 20px;
+    border-width: 10px;
+  }
+}
+
+@-webkit-keyframes green {
+  0% {
+    height: 20px;
+    width: 20px;
+    border-width: 10px;
+  }
+  25%, 55%, 85% {
+    height: 30px;
+    width: 5px;
+    border-width: 5px;
+  }
+  40%, 70%, 100% {
+    height: 30px;
+    width: 0;
+    border-width: 5px;
+  }
+}
+
+@keyframes green {
+  0% {
+    height: 20px;
+    width: 20px;
+    border-width: 10px;
+  }
+  25%, 55%, 85% {
+    height: 30px;
+    width: 5px;
+    border-width: 5px;
+  }
+  40%, 70%, 100% {
+    height: 30px;
+    width: 0;
+    border-width: 5px;
+  }
+}
+
 /*===== GLOBAL CLASSES =====*/
 .btn {
   -webkit-transition: all .3s ease-in-out;
@@ -29,6 +121,168 @@
           box-shadow: none;
 }
 
+.gate {
+  display: inline-block;
+  width: 215px;
+  padding: 10px 0 10px 15px;
+  font-family: "Open Sans", sans;
+  font-weight: 400;
+  color: #377D6A;
+  background: #efefef;
+  border: 0;
+  border-radius: 3px;
+  outline: 0;
+  text-indent: 65px;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.gate::-webkit-input-placeholder {
+  color: #efefef;
+  text-indent: 0;
+  font-weight: 300;
+}
+
+.gate + label {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 15px;
+  text-shadow: 0 1px 0 rgba(19, 74, 70, 0.4);
+  background: #7AB893;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  -webkit-transform-origin: left bottom;
+          transform-origin: left bottom;
+  z-index: 99;
+}
+
+.gate + label:before, .gate + label:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 3px;
+  background: #377D6A;
+  -webkit-transform-origin: left bottom;
+          transform-origin: left bottom;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.gate + label:before {
+  background: rgba(3, 36, 41, 0.2);
+  z-index: -2;
+  right: 20%;
+}
+
+.gate:focus, .gate:active {
+  color: #377D6A;
+  text-indent: 0;
+  background: #fff;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+.gate:focus::-webkit-input-placeholder, .gate:active::-webkit-input-placeholder {
+  color: #aaa;
+}
+
+.gate:focus + label, .gate:active + label {
+  -webkit-transform: rotate(-66deg);
+          transform: rotate(-66deg);
+  border-radius: 3px;
+}
+
+.gate:focus + label:before, .gate:active + label:before {
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+/*================switch==================*/
+input[type="checkbox"] {
+  display: none;
+}
+
+.toggleWrapper {
+  z-index: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #fe4551;
+  -webkit-box-shadow: 0 20px 20px 0 rgba(254, 69, 81, 0.3);
+          box-shadow: 0 20px 20px 0 rgba(254, 69, 81, 0.3);
+}
+
+.toggleWrapper:active {
+  width: 32px;
+  height: 32px;
+  -webkit-box-shadow: 0 15px 15px 0 rgba(254, 69, 81, 0.5);
+          box-shadow: 0 15px 15px 0 rgba(254, 69, 81, 0.5);
+}
+
+.toggleWrapper:active .toggle {
+  height: 5px;
+  width: 5px;
+}
+
+.toggleWrapper .toggle {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  height: 5px;
+  width: 5px;
+  background-color: transparent;
+  border: 5px solid #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-animation: red .7s linear forwards;
+          animation: red .7s linear forwards;
+}
+
+input[type="checkbox"]:checked ~ .background {
+  background-color: #f9faf7;
+}
+
+input[type="checkbox"]:checked + .toggleWrapper {
+  background-color: #48e98a;
+  -webkit-box-shadow: 0 20px 20px 0 rgba(72, 233, 138, 0.3);
+          box-shadow: 0 20px 20px 0 rgba(72, 233, 138, 0.3);
+}
+
+input[type="checkbox"]:checked + .toggleWrapper:active {
+  -webkit-box-shadow: 0 15px 15px 0 rgba(72, 233, 138, 0.5);
+          box-shadow: 0 15px 15px 0 rgba(72, 233, 138, 0.5);
+}
+
+input[type="checkbox"]:checked + .toggleWrapper .toggle {
+  width: 0;
+  background-color: #fff;
+  border-color: transparent;
+  border-radius: 30px;
+  -webkit-animation: green .7s linear forwards !important;
+          animation: green .7s linear forwards !important;
+}
+
+/*===== GLOBAL CLASSES END=====*/
 *, *::after, *::before {
   margin: 0;
   padding: 0;
@@ -292,13 +546,15 @@ body #main-container .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 1rem 0;
 }
 
-body #main-container .row .card__1 {
+body #main-container .row .card {
   background: #FFF;
   border-radius: 6px;
   padding: 1em;
-  height: 50vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -309,6 +565,11 @@ body #main-container .row .card__1 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 0 .5em;
+}
+
+body #main-container .row .card__1 {
+  height: 50vh;
 }
 
 body #main-container .row .card__1 .header {
@@ -320,11 +581,44 @@ body #main-container .row .card__1 .header {
           justify-content: space-between;
 }
 
+body #main-container .row .card__1 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #main-container .row .card__1 .footer span {
+  display: inline-block;
+  padding-right: .1em;
+}
+
 body #main-container .row #grade_overview {
+  -webkit-box-flex: 1.6;
+      -ms-flex: 1.6;
+          flex: 1.6;
   width: 40vw;
 }
 
 body #main-container .row #pass_fail_overview {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   width: 30vw;
+}
+
+body #main-container .row #search {
+  -webkit-box-flex: .5;
+      -ms-flex: .5;
+          flex: .5;
+}
+
+body #main-container .row #search div {
+  position: relative;
 }
 /*# sourceMappingURL=index.css.map */
