--- a/css/index.css
+++ b/css/index.css
@@ -1,98 +1,6 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap");
 /*===== GLOBAL VARS =====*/
-/*===== GLOBAL NAIMATIONS =====*/
-@-webkit-keyframes red {
-  0% {
-    height: 30px;
-    width: 0;
-    border-width: 5px;
-  }
-  55% {
-    height: 13px;
-    width: 27px;
-    border-width: 10px;
-  }
-  70% {
-    height: 20px;
-    width: 20px;
-    border-width: 10px;
-  }
-  85% {
-    height: 15px;
-    width: 25px;
-    border-width: 10px;
-  }
-  100% {
-    height: 20px;
-    width: 20px;
-    border-width: 10px;
-  }
-}
-@keyframes red {
-  0% {
-    height: 30px;
-    width: 0;
-    border-width: 5px;
-  }
-  55% {
-    height: 13px;
-    width: 27px;
-    border-width: 10px;
-  }
-  70% {
-    height: 20px;
-    width: 20px;
-    border-width: 10px;
-  }
-  85% {
-    height: 15px;
-    width: 25px;
-    border-width: 10px;
-  }
-  100% {
-    height: 20px;
-    width: 20px;
-    border-width: 10px;
-  }
-}
-
-@-webkit-keyframes green {
-  0% {
-    height: 20px;
-    width: 20px;
-    border-width: 10px;
-  }
-  25%, 55%, 85% {
-    height: 30px;
-    width: 5px;
-    border-width: 5px;
-  }
-  40%, 70%, 100% {
-    height: 30px;
-    width: 0;
-    border-width: 5px;
-  }
-}
-
-@keyframes green {
-  0% {
-    height: 20px;
-    width: 20px;
-    border-width: 10px;
-  }
-  25%, 55%, 85% {
-    height: 30px;
-    width: 5px;
-    border-width: 5px;
-  }
-  40%, 70%, 100% {
-    height: 30px;
-    width: 0;
-    border-width: 5px;
-  }
-}
-
 /*===== GLOBAL CLASSES =====*/
 .btn {
   -webkit-transition: all .3s ease-in-out;
@@ -127,7 +35,7 @@
   padding: 10px 0 10px 15px;
   font-family: "Open Sans", sans;
   font-weight: 400;
-  color: #377D6A;
+  color: #48E98A;
   background: #efefef;
   border: 0;
   border-radius: 3px;
@@ -150,7 +58,7 @@
   left: 0;
   padding: 10px 15px;
   text-shadow: 0 1px 0 rgba(19, 74, 70, 0.4);
-  background: #7AB893;
+  background: #48E98A;
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
   border-top-left-radius: 3px;
@@ -168,7 +76,7 @@
   bottom: 0;
   left: 0;
   border-radius: 3px;
-  background: #377D6A;
+  background: #48E98A;
   -webkit-transform-origin: left bottom;
           transform-origin: left bottom;
   -webkit-transition: all .4s ease-in-out;
@@ -207,79 +115,165 @@
 }
 
 /*================switch==================*/
-input[type="checkbox"] {
+.switch {
+  cursor: pointer;
+}
+
+.switch input[type="checkbox"] {
   display: none;
 }
 
-.toggleWrapper {
-  z-index: 3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  cursor: pointer;
-  -webkit-transition: all .2s;
-  transition: all .2s;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #fe4551;
-  -webkit-box-shadow: 0 20px 20px 0 rgba(254, 69, 81, 0.3);
-          box-shadow: 0 20px 20px 0 rgba(254, 69, 81, 0.3);
+.switch input[type="checkbox"] + span {
+  width: 40px;
+  height: 25px;
+  border-radius: 14px;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  display: block;
+  position: relative;
+  background: #FF4651;
+  -webkit-box-shadow: 0 8px 16px -1px rgba(255, 70, 81, 0.2);
+          box-shadow: 0 8px 16px -1px rgba(255, 70, 81, 0.2);
 }
 
-.toggleWrapper:active {
-  width: 32px;
-  height: 32px;
-  -webkit-box-shadow: 0 15px 15px 0 rgba(254, 69, 81, 0.5);
-          box-shadow: 0 15px 15px 0 rgba(254, 69, 81, 0.5);
+.switch input[type="checkbox"] + span:before, .switch input[type="checkbox"] + span:after {
+  content: '';
+  display: block;
+  position: absolute;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
 }
 
-.toggleWrapper:active .toggle {
-  height: 5px;
-  width: 5px;
-}
-
-.toggleWrapper .toggle {
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  height: 5px;
-  width: 5px;
-  background-color: transparent;
+.switch input[type="checkbox"] + span:before {
+  top: 3px;
+  left: 3px;
+  width: 18px;
+  height: 18px;
+  border-radius: 9px;
   border: 5px solid #fff;
-  border-radius: 50%;
-  cursor: pointer;
-  -webkit-animation: red .7s linear forwards;
-          animation: red .7s linear forwards;
 }
 
-input[type="checkbox"]:checked ~ .background {
-  background-color: #f9faf7;
+.switch input[type="checkbox"] + span:after {
+  top: 5px;
+  left: 32px;
+  width: 6px;
+  height: 18px;
+  border-radius: 40%;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  background: #fff;
+  opacity: 0;
 }
 
-input[type="checkbox"]:checked + .toggleWrapper {
-  background-color: #48e98a;
-  -webkit-box-shadow: 0 20px 20px 0 rgba(72, 233, 138, 0.3);
-          box-shadow: 0 20px 20px 0 rgba(72, 233, 138, 0.3);
+.switch input[type="checkbox"] + span:active {
+  -webkit-transform: scale(0.92);
+          transform: scale(0.92);
 }
 
-input[type="checkbox"]:checked + .toggleWrapper:active {
-  -webkit-box-shadow: 0 15px 15px 0 rgba(72, 233, 138, 0.5);
-          box-shadow: 0 15px 15px 0 rgba(72, 233, 138, 0.5);
+.switch input[type="checkbox"]:checked + span {
+  background: #48EA8B;
+  -webkit-box-shadow: 0 8px 16px -1px rgba(72, 234, 139, 0.2);
+          box-shadow: 0 8px 16px -1px rgba(72, 234, 139, 0.2);
 }
 
-input[type="checkbox"]:checked + .toggleWrapper .toggle {
-  width: 0;
-  background-color: #fff;
-  border-color: transparent;
-  border-radius: 30px;
-  -webkit-animation: green .7s linear forwards !important;
-          animation: green .7s linear forwards !important;
+.switch input[type="checkbox"]:checked + span:before {
+  width: 0px;
+  border-radius: 3px;
+  margin-left: 22px;
+  border-width: 3px;
+  background: #fff;
+}
+
+.switch input[type="checkbox"]:checked + span:after {
+  -webkit-animation: blobChecked .35s linear forwards .2s;
+          animation: blobChecked .35s linear forwards .2s;
+}
+
+.switch input[type="checkbox"]:not(:checked) + span:before {
+  -webkit-animation: blob .85s linear forwards .2s;
+          animation: blob .85s linear forwards .2s;
+}
+
+@-webkit-keyframes blob {
+  0%, 100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  30% {
+    -webkit-transform: scale(1.12, 0.94);
+            transform: scale(1.12, 0.94);
+  }
+  60% {
+    -webkit-transform: scale(0.96, 1.06);
+            transform: scale(0.96, 1.06);
+  }
+}
+
+@keyframes blob {
+  0%, 100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  30% {
+    -webkit-transform: scale(1.12, 0.94);
+            transform: scale(1.12, 0.94);
+  }
+  60% {
+    -webkit-transform: scale(0.96, 1.06);
+            transform: scale(0.96, 1.06);
+  }
+}
+
+@-webkit-keyframes blobChecked {
+  0% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  30% {
+    -webkit-transform: scaleX(1.44);
+            transform: scaleX(1.44);
+  }
+  70% {
+    -webkit-transform: scaleX(1.18);
+            transform: scaleX(1.18);
+  }
+  50%,
+  99% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes blobChecked {
+  0% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  30% {
+    -webkit-transform: scaleX(1.44);
+            transform: scaleX(1.44);
+  }
+  70% {
+    -webkit-transform: scaleX(1.18);
+            transform: scaleX(1.18);
+  }
+  50%,
+  99% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
 }
 
 /*===== GLOBAL CLASSES END=====*/
@@ -595,7 +589,7 @@ body #main-container .row .card__1 .footer {
 
 body #main-container .row .card__1 .footer span {
   display: inline-block;
-  padding-right: .1em;
+  padding-right: .3em;
 }
 
 body #main-container .row #grade_overview {
