--- a/css/index.scss
+++ b/css/index.scss
@@ -16,6 +16,7 @@ $darkoverlayColor:rgba(0,0,0,0.5);
 $containerBgColor : rgb(243, 244, 249);
 $red: #FF4651;
 $green: #48EA8B;
+$black: #202121;
 
 $normalFontSize: 1rem;
 $smallFontSize: .875rem;
@@ -23,27 +24,37 @@ $smallFontSize: .875rem;
 $zIndexUp: 100;
 $zIndexMiddle: 50;
 /*===== GLOBAL CLASSES =====*/
-.btn {
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    border-radius: 10px;
-    background-image: radial-gradient(circle at 52% 84%, rgba(194, 194, 194,0.06) 0%, rgba(194, 194, 194,0.06) 18%,transparent 18%, transparent 100%),radial-gradient(circle at 38% 97%, rgba(239, 239, 239,0.06) 0%, rgba(239, 239, 239,0.06) 20%,transparent 20%, transparent 100%),radial-gradient(circle at 86% 17%, rgba(210, 210, 210,0.06) 0%, rgba(210, 210, 210,0.06) 61%,transparent 61%, transparent 100%),radial-gradient(circle at 6% 48%, rgba(91, 91, 91,0.06) 0%, rgba(91, 91, 91,0.06) 27%,transparent 27%, transparent 100%),radial-gradient(circle at 27% 63%, rgba(86, 86, 86,0.06) 0%, rgba(86, 86, 86,0.06) 30%,transparent 30%, transparent 100%),radial-gradient(circle at 2% 91%, rgba(182, 182, 182,0.06) 0%, rgba(182, 182, 182,0.06) 29%,transparent 29%, transparent 100%),linear-gradient(90deg, rgb(203, 171, 120),rgb(227, 87, 5));
-    box-shadow: 0 5px 20px -6px #000;
-    outline: none;
-    border: none;
+@mixin transition($property: all, $duration: 0.5s, $ease: cubic-bezier(0.65,-0.25,0.25, 1.95)) {
+    transition: $property $duration $ease;
+}
+button {
+    position: relative;
+    display: inline-block;
     cursor: pointer;
-    font-size: 1.1em;
-    color: #000;
-    padding: .5em .5em;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    font-size: inherit;
+    font-family: inherit;
     
-    &:active {
-        opacity: 0.5;
-    }
-    
-    &:hover {
-        -webkit-transform: translatey(5px);
-        transform: translatey(5px);
-        box-shadow: none;
+    &.hover-expand {
+      @include transition(all, 0.5s, cubic-bezier(0.65,-0.25,0.25,1.95));
+      font-weight: 900;
+      color: $whiteColor;
+      padding: 1rem 1.8rem;
+      background: $primaryColor;
+      text-transform: uppercase;
+      
+      &.v-s{
+        font-size: .9rem;
+        font-weight: 500;
+        padding: .2rem .4rem;
+      }
+
+      &:hover, &:focus, &:active {
+        letter-spacing: 0.125rem;
+      }
     }
 }
 .gate {
@@ -239,7 +250,7 @@ html {
 
 body {
     font-family: $fontFamily;
-    
+    height: 100vh;
     header {
         font-weight: 300;
         text-decoration: none;
@@ -250,6 +261,7 @@ body {
         background-color: $bgColor;
         padding: 1rem;
         color: #fff;
+        max-height: 3rem;
         
         & > div {
             flex: 0;
@@ -396,6 +408,21 @@ body {
         margin-left: $navWidth;
         position: relative;
         background-color: $containerBgColor;
+
+        height: calc(100% - 3rem);
+        display: grid;
+        grid-gap: .5rem;
+        grid-template:repeat(8, 1fr) / repeat(12, 1fr);
+        grid-template-areas: 
+            "m m m m m m c c c c s s"
+            "m m m m m m c c c c s s"
+            "m m m m m m c c c c s s"
+            "m m m m m m c c c c s s"
+            "m m m m m m c c c c s s"
+            "b b b a a a a a a a a a"
+            "b b b a a a a a a a a a"
+            "b b b a a a a a a a a a";
+
         &.overlay {
             pointer-events: none;
             transition: all 500ms ease;
@@ -415,21 +442,14 @@ body {
             }
         }
 
-        .row{
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 1rem 0;
-
-            .card{
+        .card{
                 background: $whiteColor;
                 border-radius: 6px;
                 padding: 1em;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                margin: 0 .5em;
+                // margin: 0 .5em;
                 .header{
                     display: flex;
                     justify-content: space-between;
@@ -454,25 +474,29 @@ body {
                         height: 50%;
                     }
                 }
-            }
-            .card__1{
-                height: 50vh;
-            }
+        }
+        .card__1{
+            height: 100%;
+        }
 
-            #grade_overview{
-                flex: 1.6;
-                width: 40vw;
-            }
-            #pass_fail_overview{
-                flex: 1;
-                width: 30vw;
-            }
-            #search{
-                flex:.5;
-                div{
-                    position: relative;
-                }
+        #grade_overview{
+            grid-area: m;
+        }
+        #pass_fail_overview{
+            grid-area: c;
+        }
+        #search{
+            grid-area: s;
+            div{
+                position: relative;
             }
         }
+        #total_pass_fail_el{
+            grid-area: b;
+        }
+        #extra{
+            grid-area: a;
+        }
+        
     }
 }
