--- a/css/index.scss
+++ b/css/index.scss
@@ -470,6 +470,7 @@ body {
                 }
                 .img{
                     // object-fit: cover;
+                    // height: 70%;
                     svg{
                         width: 100%;
                         height: 50%;
