code modularized in functions. working googd

--- a/css/index.scss
+++ b/css/index.scss
@@ -250,7 +250,7 @@ html {
 
 body {
     font-family: $fontFamily;
-    height: 100vh;
+    // height: 100vh;
     header {
         font-weight: 300;
         text-decoration: none;
@@ -413,16 +413,16 @@ body {
         height: calc(100% - 3rem);
         display: grid;
         grid-gap: .5rem;
-        grid-template:repeat(8, 1fr) / repeat(12, 1fr);
+        grid-template:repeat(8, 120px) / repeat(12, 1fr); /* row / column */
         grid-template-areas: 
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
             "m m m m m m c c c c s s"
-            "t t t a a a a a a a a a"
-            "t t t a a a a a a a a a"
-            "t t t a a a a a a a a a";
+            "t t t a a a a a a a e e"
+            "t t t a a a a a a a e e"
+            "t t t a a a a a a a e e";
 
         &.overlay {
             pointer-events: none;
@@ -498,6 +498,9 @@ body {
         }
         #extra{
             grid-area: a;
+        }
+        #e{
+            grid-area: e;
         }
         
     }
